Add reflection berkshire.html

--- a/week-2/berkshire/berkshire.html
+++ b/week-2/berkshire/berkshire.html
@@ -1,4 +1,40 @@
 <!DOCTYPE html>
+<!--
+Release 3: Reflect
+- What was it like to translate your previous learning with HTML into an actual site?
+My HTML skills are weakest so far. After juggling through several resources and some experimentation led to concrete ideas. Pairing session were useful, it was an opportunity to bounce ideas off each other. We discussed an approach to solve a particular problem and evaluated different ways that we can solve the problem. e.g. should we use <div> OR <tables>.
+When should we use <div> as compared to <tables>
+- How did you do at keeping to best practices (i.e. no formatting in the HTML)
+- Always close your tags
+- Never use inline styles
+- Use browser developer tools
+- Validate HTML
+- Use appropriate tags to logically divide content on your page.
+- What seems good and bad about HTML?
+- Pros
+  - It gives structure to your document that can be easily consumed by machines.
+  - <tags> to link pages
+- multiple devices support e.g. tables, cell phones
+- Cons
+  - there is no error for HTML syntax mistakes
+  - As compared to thick clients, HTML still lacks capabilities that are mission critical. e.g. a browser based file upload application will not resume upload if it breaks. A user would have to start all over again.
+
+As compared to thick clients like torrents application can resume uploads.
+
+- What tricks do you have for remembering how to write HTML?
+I start with HTML structure tags
+<html>
+<head>
+    <body>
+
+Some tag start with the same name as action e.g. Headings <h1> paragraphs <p>
+
+Few are difficult to remember e.g. “hyper link” referred to as anchor tags start with <a href>
+
+With some help from text editor and autocompletion, i get to remember these tags.
+
+
+-->
 
 <html>
 
@@ -21,8 +57,10 @@ Official Home Page </h1>
   <section>
    <ul>
      <li><a href="#">placeholder</a></li>
-     <li><a href="http://www.gmail.com">placeholder</a></li>
-     <li><a href="http://www.gmail.com">placeholder</a></li>
+     <li><a href="#">placeholder</a></li>
+     <li><a href="#">placeholder</a></li>
+     <li><a href="#">placeholder</a></li>
+     <li><a href="#">placeholder</a></li>
 
    </ul>
 
