Add content to berkshire.html

--- a/week-2/berkshire/berkshire.html
+++ b/week-2/berkshire/berkshire.html
@@ -38,12 +38,13 @@ With some help from text editor and autocompletion, i get to remember these tags
 
 <html>
 
-<header>
+<head>
+  <meta charset="UTF-8">
   <title>
     2.6-First-HTML-Page-PPS
   </title>
-  <meta charset="utf-8">
-</header>
+
+</head>
 
 <body>
   <section>
