Update berkshire html

--- a/week-2/berkshire/berkshire.html
+++ b/week-2/berkshire/berkshire.html
@@ -18,7 +18,7 @@ When should we use <div> as compared to <tables>
 - Cons
   - there is no error for HTML syntax mistakes
   e.g <img src="/img/file-name.png"> would appear as broken link
-  should be - <img src="img/file-name.png">
+  should be - <img src="img/file-name.png"> extra "/" before "img/file-name.png" breaks the link.
   - As compared to thick clients, HTML still lacks capabilities that are mission critical. e.g. a browser based file upload application will not resume upload if it breaks. A user would have to start all over again.
 
 As compared to thick clients like torrents application can resume uploads.
