--- a/week-3/berkshire.html
+++ b/week-3/berkshire.html
@@ -14,7 +14,7 @@
 
 <body>
   <section>
-    <h1>BERKSHIRE HATHAWAY INC.
+    <h1>bERKSHIRE HATHAWAY INC.
       3555 Farnam Street
       Omaha, NE 68131
       Official Home Page
@@ -22,7 +22,7 @@
 
   </section>
 
-  <div class="content-container">
+  <div id="content-container">
 
     <div class="content-left float-left">
 
@@ -51,7 +51,7 @@
   </div>
 
   <div class="footer">
-    <img src="../img/geicoimg.png">
+    <img src="geicoimg.png">
     <p>
       FOR A FREE CAR INSURANCE RATE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY
       WWW.GEICO.COM OR CALL 1-888-395-6349, 24 HOURS A DAY
