--- a/week-3/berkshire.html
+++ b/week-3/berkshire.html
@@ -1,78 +1,71 @@
-
-
 <!DOCTYPE html>
 <html>
-
 <head>
-  <meta charset="UTF-8">
-  <title>
-    3.3 Beginning CSS
-  </title>
+  <title>BERKSHIRE HATHAWAY INC.</title>
   <link rel="stylesheet" href="stylesheets/my-berkshire-stylesheet.css">
-
 </head>
 
 <body>
-  <section>
-    <h1>bERKSHIRE HATHAWAY INC.
-      3555 Farnam Street
-      Omaha, NE 68131
-      Official Home Page
-    </h1>
+  <header class="centered">
+    <h2 class="padding-removed">Berkshire <span>H</span>athaway Inc.</h2>
+    <h4 class="padding-removed">3555 Farnam Street</h4>
+    <h4 class="padding-removed">Omaha, NE 68131</h4>
+    <h3 class="padding-removed">Official Homepage</h3>
+    <br />
+  </header>
 
-  </section>
+  <main>
 
-  <div id="content-container">
+  <div id="container">
+     <div class="content-left">
+      <ul>
+          <li><a href="#">A Message From Warren E. Buffett</a></li>
+          <li><p class="padding-removed"><a href="#">Annual & Interim Reports</a></p>
+              <p class="padding-removed">Updated November 6, 2015</p></li>
+          <li><a href="#">Special Letters From Warren & Charlie RE:Past, Present and Future</a></li>
+          <li><a href="#">Link to SEC Filings</a></li>
+          <li><a href="#">Links to Berkshire Subsidiary Companies</a></li>
+          <li><a href="#">Corporate Governance</a></li>
+          <li><a href="#">Owner's Manual</a></li>
+          <li><a href="#">Letters from Warren E. Buffett Regarding Pledges to Make Gifts of Berkshire Stock</a></li>
+        </ul>
+      </div>
 
-    <div class="content-left float-left">
-
+      <div class="content-right">
         <ul>
-         <li><a href="#">placeholder</a></li>
-         <li><a href="#">placeholder</a></li>
-         <li><a href="#">placeholder</a></li>
-         <li><a href="#">placeholder</a></li>
-         <li><a href="#">placeholder</a></li>
+          <li><p class="padding-removed"><a href="#">News Releases</a></p>
+              <p class="padding-removed">Updated February 16, 2016</p></li>
+          <li><p class="padding-removed"><a href="#">Warren Buffett's Letters to Berkshire Shareholders</a></p>
+              <p class="padding-removed">Updated February 28, 2015</p></li>
+          <li><a href="#">Charlie Munger's Letters to Wesco Shareholders</a></li>
+          <li><a href="#">Annual Meeting Information</a></li>
+          <li><p class="padding-removed"><a href="#">Celebrating 50 Years of a Profitable Partnership</a></p>
+              <p class="padding-removed">(A commemorative book first sold at the 2015 Annual Meeting and now for sale on eBay.) </p class="padding-removed"></li>
+          <li><a href="#">Comparative Rights and Relative Prices of Class A and B Stock</a></li>
+          <li><a href="#">Berkshire Activewear</a></li>
+        </ul>
+      </div>
+   </div>
 
-       </ul>
-    </div>
-
-    <div class="content-right float-left">
-
-        <ul>
-         <li><a href="#">placeholder</a></li>
-         <li><a href="#">placeholder</a></li>
-         <li><a href="#">placeholder</a></li>
-         <li><a href="#">placeholder</a></li>
-         <li><a href="#">placeholder</a></li>
-
-       </ul>
-    </div>
-
+  <div class="geico">
+    <br />
+      <p class="centered"><img src="imgs/geico.jpg" alt="GEICO"></p>
+      <p class="centered">FOR A FREE CAR INSURANCE RATE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY</p>
+      <p class="centered"><a href="http://www.geico.com/">WWW.GEICO.COM</a> OR CALL 1-888-395-6349, 24 HOURS A DAY</p>
+     <br />
+     <br />
   </div>
 
-  <div class="footer">
-    <img src="geicoimg.png">
-    <p>
-      FOR A FREE CAR INSURANCE RATE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY
-      WWW.GEICO.COM OR CALL 1-888-395-6349, 24 HOURS A DAY
-
-    </p>
-
-    <p>
-    If you have any comments about our WEB page, you can either write us at the address shown above or e-mail us at
-    <a href="mailto:berkshire@berkshirehathaway.com">berkshire@berkshirehathaway.com</a>.
-    However, due to the limited number of personnel in our corporate office, we are unable to provide a direct response.
-    </p>
+  <div class="bottom-container">
+    <p>If you have any comments about our WEB page, you can either write us at the address shown above or e-mail us at <a href="mailto:berkshire@berkshirehathaway.com">berkshire@berkshirehathaway.com</a>. However, due to the limited number of personnel in our corporate office, we are unable to provide a direct response.</p>
   </div>
 
-  <div>
-    <p>
-      <a href="Legal Disclaimer">Legal Disclaimer</a><br>
-        Copyright © 1978-2016 Berkshire Hathaway Inc.
-    </p>
-  </div>
+</main>
 
 
+<footer>
+  <p><a href="disclaimer.html">Legal Disclaimer</a></p>
+  <p class="footer-text">Copyright © 1978-2016 <b>Berkshire Hathaway Inc.</b></p>
+</footer>
 </body>
-
 </html>
