--- a/week-3/berkshire.html
+++ b/week-3/berkshire.html
@@ -49,7 +49,7 @@
 
   <div class="geico">
     <br />
-      <p class="centered"><img src="imgs/geico.jpg" alt="GEICO"></p>
+      <p class="centered"><img src="geicoimg.png" alt="GEICO"></p>
       <p class="centered">FOR A FREE CAR INSURANCE RATE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY</p>
       <p class="centered"><a href="http://www.geico.com/">WWW.GEICO.COM</a> OR CALL 1-888-395-6349, 24 HOURS A DAY</p>
      <br />
