--- a/week-3/berkshire.html
+++ b/week-3/berkshire.html
@@ -3,6 +3,7 @@
 <head>
   <title>BERKSHIRE HATHAWAY INC.</title>
   <link rel="stylesheet" href="stylesheets/my-berkshire-stylesheet.css">
+  <link href='https://fonts.googleapis.com/css?family=Libre+Baskerville' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
