Add reflection in DOM challenge

--- a/week-9/JavaScript/DOM-manipulation/home_page.html
+++ b/week-9/JavaScript/DOM-manipulation/home_page.html
@@ -32,7 +32,11 @@
 
 answer the following questions:
 
-What did you learn about the DOM?
-What are some useful methods to use to manipulate the DOM?
+1. What did you learn about the DOM?
+  # I learned how to manipulate HTML elements change proties, insert new HTML elelemnts.
+2. What are some useful methods to use to manipulate the DOM?
+  # getElementById
+  # getElementsByTagName
+  # getElementsByClassName
 -->
-<!-- # This challenge took me [#] hours. -->
+<!-- # This challenge took me [1] hours. -->
