--- a/week-9/JavaScript/DOM-manipulation/home_page.html
+++ b/week-9/JavaScript/DOM-manipulation/home_page.html
@@ -6,7 +6,9 @@
   <div id="release-0">
     <p class="release-4"> Here is some text, add a class "done" to the parent div</p>
   </div>
+  <div>
 
+  </div>
   <div id="release-1">
     <p>remove the #release-1 div</p>
   </div>
